Add `.inline-figure` feature
Might not be the best way to do this, but it works.

--- a/src/assets/_article.scss
+++ b/src/assets/_article.scss
@@ -37,6 +37,12 @@ a abbr:hover {
   a:hover img, a:hover video {
     filter: brightness(110%);
   }
+
+  .inline-figure {
+    display: inline-block;
+    float: none;
+    width: 60%;
+  }
 }
 
 a {
