--- a/src/assets/_article.scss
+++ b/src/assets/_article.scss
@@ -25,7 +25,7 @@ a abbr:hover {
   img, video {
     width: auto;
     max-width: 100%;
-    max-height: 400px;
+    // max-height: 400px;
     transition: filter $transition-time / 2;
   }
 
