Fix figure styles; update main README; bump to 3.0.0

--- a/src/assets/_article.scss
+++ b/src/assets/_article.scss
@@ -38,10 +38,9 @@ a abbr:hover {
   }
 
   .inline-figure {
-    display: inline-block;
     float: none;
     margin-left: 0;
-    width: 100%;
+    width: fit-content;
   }
 }
 
