--- a/src/lib/components/PageWrapper/PageWrapper.scss
+++ b/src/lib/components/PageWrapper/PageWrapper.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
   }
 
+  #theme-mountpoint {
+    display: flex;
+  }
+
   .wrapper-nav {
     background: var(--bg-sidebar);
     height: 100vh;
