Continued content refactor

--- a/src/assets/_constants.scss
+++ b/src/assets/_constants.scss
@@ -1,7 +1,7 @@
 // $bg-dark: #23292f;
 $bg-dark: #051618;
-$fg-dark:  mix($bg-dark, #fff, 35%);
-$fg-code-dark: #49E9A6;
+$fg-dark:  mix($bg-dark, #fff, 30%);
+$fg-code-dark: #60c99d;
 $fg-faded-dark: #5B858B;
 $fg-strong-dark: mix($bg-dark, #fff, 25%);
 $bg-overlay-dark: lighten($bg-dark, 5%);
