Move unit converter page, improve H1 scripting page

--- a/src/assets/_constants.scss
+++ b/src/assets/_constants.scss
@@ -1,5 +1,6 @@
 // $bg-dark: #23292f;
-$bg-dark: #051618;
+$bg-dark: #0e1d1f;
+// $bg-dark: #051618;
 $fg-dark:  mix($bg-dark, #fff, 30%);
 $fg-code-dark: #60c99d;
 $fg-faded-dark: #5B858B;
