--- a/src/lib/components/UnitConverter/UnitConverter.scss
+++ b/src/lib/components/UnitConverter/UnitConverter.scss
@@ -1,9 +1,9 @@
 .unit-converter {
   display: flex;
   flex-wrap: wrap;
+  gap: var(--padding-md);
   .inputs, .presets {
     flex-grow: 1;
-    flex-basis: 50%;
     min-width: 15em;
   }
 }
