--- a/src/assets/_forms.scss
+++ b/src/assets/_forms.scss
@@ -71,28 +71,28 @@ input {
   }
 }
 
-input[type="radio"] {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  opacity: 0;
-  & + label:before {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    margin-left: -26px;
-    padding: 8px;
-    border: 2px solid var(--border-color);;
-    border-radius: 2em;
-  }
-  &:checked + label:before {
-    border: 2px solid var(--fg-strong);
-    background: var(--fg-link);
-  }
-  &:checked + label {
-    color: var(--fg-strong);
-  }
-}
+// input[type="radio"] {
+//   display: inline-block;
+//   margin: 0;
+//   padding: 0;
+//   opacity: 0;
+//   & + label:before {
+//     content: '';
+//     display: inline-block;
+//     position: absolute;
+//     margin-left: -26px;
+//     padding: 8px;
+//     border: 2px solid var(--border-color);;
+//     border-radius: 2em;
+//   }
+//   &:checked + label:before {
+//     border: 2px solid var(--fg-strong);
+//     background: var(--fg-link);
+//   }
+//   &:checked + label {
+//     color: var(--fg-strong);
+//   }
+// }
 
 input[type="checkbox"] {
   display: inline-block;
