--- a/src/lib/components/PageWrapper/PageWrapper.scss
+++ b/src/lib/components/PageWrapper/PageWrapper.scss
@@ -3,10 +3,6 @@
 .wrapper {
   display: flex;
 
-  @include mobile {
-    flex-direction: column;
-  }
-
   #theme-mountpoint {
     display: flex;
   }
@@ -18,17 +14,11 @@
     top: 0;
     overflow-y: auto;
     width: 26em;
+    min-width: 256px;
     scrollbar-color: transparent transparent;
 
     &:hover {
       scrollbar-color: var(--bg-inset) transparent;
-    }
-
-    @include mobile {
-      position: unset;
-      height: auto;
-      width: 100%;
-      border-bottom: 1px solid var(--border-color);
     }
 
     .nav-bar {
@@ -78,12 +68,6 @@
     .nav-tree {
       padding: 0 var(--padding-md);
       overflow-x: auto;
-
-      &:not(.open) {
-        @include mobile {
-          display: none;
-        }
-      }
           
       ol, ul {
         list-style: none;
@@ -100,6 +84,21 @@
       .feather {
         color: var(--fg-faded);
         margin-right: 6px;
+        min-width: 1em;
+      }
+
+      .item-link {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+      }
+
+      .item-title {
+        display: flex;
+        flex-grow: 1;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
       }
     
       li {
@@ -133,10 +132,6 @@
     order: 1;
     overflow-y: auto;
     flex-grow: 1;
-
-    @include mobile {
-      order: 2;
-    }
   }
 
   .wrapper-toc {
@@ -152,12 +147,75 @@
     &:hover {
       scrollbar-color: var(--bg-inset) transparent;
     }
+  }
 
-    @include mobile {
-      position: unset;
-      height: auto;
-      order: 1;
-      width: 100%;
+  @include mobile {
+    overflow: hidden;
+    position: relative;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    
+    .wrapper-nav, .wrapper-body, .wrapper-toc {
+      top: 55px;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+      transition: left $transition-time-interactive;
+      // border: 2px solid red;
+    }
+
+    .nav-bar {
+      background-color: var(--bg);
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 55px;
+      z-index: 100000;
+    }
+
+    &.menu-view {
+      .wrapper-nav {
+        left: 0;
+      }
+
+      .wrapper-body {
+        left: 100vw;
+      }
+
+      .wrapper-toc {
+        left: 200vw;
+      }
+    }
+
+    &.body-view {
+      .wrapper-nav {
+        left: -100vw;
+      }
+
+      .wrapper-body {
+        left: 0;
+      }
+  
+      .wrapper-toc {
+        left: 100vw;
+      }
+    }
+
+    &.toc-view {
+      .wrapper-nav {
+        left: -200vw;
+      }
+
+      .wrapper-body {
+        left: -100vw;
+      }
+
+      .wrapper-toc {
+        left: 0vw;
+      }
     }
   }
 }
